<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".desconto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/uni_acad_foreground" />

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/calculo_do_desconto_simples"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/valor_nominal_do_t_tulo"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <TextView
                android:id="@+id/txtTaxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:text="@string/taxa_de_desconto"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCapital" />

            <RadioGroup
                android:id="@+id/grupoTaxa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="28dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTaxa">

                <RadioButton
                    android:id="@+id/mes"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ao_m_s" />

                <RadioButton
                    android:id="@+id/ano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40sp"
                    android:layout_marginLeft="40sp"
                    android:text="@string/ao_ano" />

            </RadioGroup>

            <TextView
                android:id="@+id/txtAntecipacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="28dp"
                android:text="@string/antecipa_o_do_desconto"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grupoTaxa" />

            <EditText
                android:id="@+id/capital"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/vazio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtCapital"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/porcentagem"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/taxaD"
                app:layout_constraintTop_toBottomOf="@+id/capital" />

            <EditText
                android:id="@+id/taxaD"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/vazio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/grupoTaxa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.315"
                app:layout_constraintStart_toEndOf="@+id/txtTaxa"
                app:layout_constraintTop_toBottomOf="@+id/capital" />

            <EditText
                android:id="@+id/antecipacao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/prazo1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtAntecipacao"
                app:layout_constraintTop_toBottomOf="@+id/grupoTaxa" />

            <Button
                android:id="@+id/calcularDesconto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="100dp"
                android:text="@string/calcular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAntecipacao" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>