<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jurosSimples">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="335dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/antecipacao">

                <RadioButton
                    android:id="@+id/ano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="5dp"
                    android:text="@string/ao_ano" />

                <RadioButton
                    android:id="@+id/mes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:padding="5dp"
                    android:text="@string/ao_m_s" />
            </RadioGroup>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/uni_acad_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/porcentagem"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/taxaJuros"
                app:layout_constraintTop_toBottomOf="@+id/capital" />

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/calculo_de_juros_simples"
                android:textColor="#000000"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/capital_inicial"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <EditText
                android:id="@+id/capital"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/vazio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtCapital"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <EditText
                android:id="@+id/taxaJuros"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/vazio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/txtJuros"
                app:layout_constraintTop_toBottomOf="@+id/capital" />

            <EditText
                android:id="@+id/antecipacao"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/vazio"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtTempo"
                app:layout_constraintTop_toBottomOf="@+id/taxaJuros" />

            <TextView
                android:id="@+id/txtJuros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:text="@string/taxa_de_juros"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCapital" />

            <TextView
                android:id="@+id/txtTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:text="@string/prazo"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJuros" />

            <Button
                android:id="@+id/calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="100dp"
                android:contentDescription="@string/calcular"
                android:enabled="true"
                android:text="@string/calcular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>